      mandatory keyword argument (logilab.org's #107788)

    * Fix spelling of max-branchs option, now max-branches

    * Added a new base class and interface for checkers that work on the
      tokens rather than the syntax, and only tokenize the input file
      once.

    * Follow astng renaming to astroid

    * bitbucket #37: check for unbalanced unpacking in assignments

    * bitbucket #16: fix False positive E1003 on Python 3 for argument-less super()
 
    * bitbucket #6: put back documentation in source distribution

    * bitbucket #15: epylint shouldn't hang anymore when there is a large
      output on pylint'stderr

    * bitbucket #3: remove string module from the default list of deprecated
      modules


2013-04-25  --  0.28.0
    * bitbucket #1: fix "dictionary changed size during iteration" crash

    * #74013: new E1310[bad-str-strip-call] message warning when a call to a
      {l,r,}strip method contains duplicate characters (patch by Torsten Marek)

    * #123233: new E0108[duplicate-argument-name] message reporting duplicate
      argument names

    * #81378: emit W0120[useless-else-on-loop] for loops without break

    * #124660: internal dependencies should not appear in external dependencies
      report

    * #124662: fix name error causing crash when symbols are included in output
      messages

    * #123285: apply pragmas for warnings attached to lines to physical source
      code lines

    * #123259: do not emit E0105 for yield expressions inside lambdas

    * #123892: don't crash when attempting to show source code line that can't
      be encoded with the current locale settings

    * Simplify checks for dangerous default values by unifying tests for all
      different mutable compound literals.

    * Improve the description for E1124[redundant-keyword-arg]



2013-02-26  --  0.27.0
    * #20693: replace pylint.el by Ian Eure version (patch by J.Kotta)

    * #105327: add support for --disable=all option and deprecate the