@@ -86,6 +86,9 @@ ChangeLog for Pylint
 
     * bitbucket #37: check for unbalanced unpacking in assignments
 
+    * bitbucket #25: fix incomplete-protocol false positive for read-only
+      containers like tuple
+
     * bitbucket #16: fix False positive E1003 on Python 3 for argument-less super()
  
     * bitbucket #6: put back documentation in source distribution
